hid overflow to prevent horizontal scrolling on mobile view

--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -150,6 +150,8 @@ main {
 // Mobile and Tablet screen
 @media screen and (max-width: 600px) {
 	main {
+		// hides horizontal scrolling
+		overflow-x: hidden;
 		.about {
 			.about-heading {
 				margin-bottom: 80px;
